# sql_gen

./: Cargo.toml  README.md  test.sh
.github/workflows/: rust.yml
docs/: 00 参考文档.md
src/: lib.rs  preload.rs  prelude.rs
src/collectors/: mod.rs  sql.rs
src/const_data/: mod.rs
src/database/: define_database.rs  mod.rs
src/database/database_manager/: mod.rs
src/error/: mod.rs
src/methods/: mod.rs
src/table/: define_table.rs  mod.rs
src/table/column/: mod.rs
src/table/column/column_type/: binary.rs  blob.rs  boolean.rs  date.rs  datetime.rs  decimal.rs  double.rs  float.rs  foreign_key.rs  index.rs  integer.rs  json.rs  mod.rs  primary_key.rs  string.rs  text.rs  time.rs  timestamp.rs  unique.rs
src/table/column/column_value/: boolean.rs  mod.rs
src/table/manager/: mod.rs
src/table/manager/delete_manager/: mod.rs
src/table/manager/insert_manager/: mod.rs
src/table/manager/select_manager/: mod.rs
src/table/manager/update_manager/: mod.rs
src/table/statements/: group.rs  having.rs  insert.rs  join.rs  limit.rs  mod.rs  offset.rs  order.rs  select.rs  update.rs  where.rs
src/table/table_column/: column_type_boolean.rs  column_type_date.rs  column_type_date_time.rs  column_type_integer.rs  column_type_time.rs  column_value_boolean.rs  mod.rs
src/table/table_column/types/: mod.rs
src/table/table_manager/: mod.rs
tests/: tests.rs
tests/database/: mod.rs  mysql.rs
tests/database_manager/: mssql.rs  mysql.rs  postgresql.rs  sqlite.rs
tests/table/: mysql.rs
tests/table_manager/: mod.rs  mssql.rs  mysql.rs  postgresql.rs  sqlite.rs
(+1 files in other folders)
