[package]
name = "sql_gen"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["mysql"]
mysql = []
postgresql = []
mssql = []
sqlite = []

[dependencies]
log = "0.4"
thiserror = "1.0"
once_cell = "1.12"

[dev-dependencies]
tokio-test = "0.4"